# broker_intellj

./: .dockerignore  .gitignore  GETTING_STARTED.md  QUICK_REFERENCE.sh  README.md  docker-compose.yml  setup.sh
.github/instructions/: inst.instructions.md
agent/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
agent/intellj_agent/: agent.py  agent2.py
agent/intellj_agent/.adk/: session.db
agent/intellj_agent/subagents/: broker_extraction.py  broker_query.py  internet_search.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: deals.py  debug.py  organizations.py  people.py  properties.py  stories.py
backend/app/models/: schemas.py
backend/app/services/: entity_service.py
data_tools/: constraints.txt  main.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx  page_old.tsx
frontend/src/app/activity/[...slug]/: page.tsx
frontend/src/app/buildings/[...slug]/: page.tsx
frontend/src/app/deals/: page.tsx
frontend/src/app/deals/[...slug]/: page.tsx
frontend/src/app/deals/[id]/: page.tsx
frontend/src/app/organizations/: page.tsx
frontend/src/app/organizations/[...slug]/: page.tsx
frontend/src/app/people/: page.tsx
frontend/src/app/people/[id]/: page.tsx
frontend/src/app/properties/: page.tsx
frontend/src/app/stories/: page.tsx
frontend/src/components/: ChatBot.tsx  Navbar.tsx
(+2 files in other folders)
