[project]
name = "real-estate-dashboard-api"
version = "0.1.0"
description = "FastAPI backend for Real Estate Dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.0",
    "uvicorn[standard]==0.24.0",
    "neo4j==5.13.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-asyncio==0.21.0",
    "httpx==0.25.0",
]
